[package]
name = "ptp"
version = "0.5.0"
authors = ["Tim Ryan"]
description = "Picture Transfer Protocol driver"
keywords = ["camera", "usb"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/3drobotics/rust-ptp"
repository = "https://github.com/3drobotics/rust-ptp"
edition = "2018"

[dependencies]
libusb = {git = "https://github.com/a1ien/libusb-rs"}
byteorder = {version = "1", features = ["i128"]}
log = "0.3"
time = "0.1"
