[package]
name = "libptp"
version = "0.5.0"
authors = ["Tim Ryan"]
description = "Picture Transfer Protocol driver"
keywords = ["camera", "usb"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/a1ien/libptp.git"
repository = "https://github.com/a1ien/libptp.git"
edition = "2018"

[dependencies]
rusb = "0.4.0"
byteorder = {version = "1", features = ["i128"]}
log = "0.4"
